--- a/Soli/css/style.css
+++ b/Soli/css/style.css
@@ -282,9 +282,9 @@ hr {
         flex-wrap: wrap;
         align-items: center;
         background-color: whitesmoke;
-        height: 60px;
+        height: 40px;
         width: auto;
-        font-size: 18pt;
+        font-size: 12pt;
     }
     
     .nav{
@@ -301,7 +301,7 @@ hr {
     .navPage{
         font-family: Georgia, 'Times New Roman', Times, serif;
         color: #2b2b2b;
-        padding: 0 20px 0 20px;
+        padding: 0 10px 0 10px;
         font-weight: bold;
     }
     
@@ -311,7 +311,7 @@ hr {
     
     #navLogo{
         font-family: 'Teko', sans-serif;
-        font-size: 30pt;
+        font-size: 20pt;
         color: #202020;
         padding: 0 10px 10px 10px;
         padding-left: 10px;
@@ -323,11 +323,11 @@ hr {
     }
     
     .header{
-        display: flex;
         width: auto;
-        height: 50vh;
+        height: 30vh;
         background-color: #49654E;
-        align-items: center;
+        align-content: center;
+        justify-content: center;
     }
     
     .buttonList{
@@ -335,21 +335,15 @@ hr {
     }
 
     .bigWord{
-        justify-content: center;
-        display: flex;
         width: 80vw;
+        margin: auto;
     }
     
     .button{
         text-align: center;
         font-weight: bolder;
         font-size: medium;
-        padding: 12px 28px 12px 28px;
-        max-width: 250px;
-        margin: 10px 0 10px 0;
-        width: auto;
-        height: auto;
-        transition: all .2s ease-in-out;
+        width: 250px;
         border: #ffffff73 2px solid;
     }
     
@@ -388,7 +382,7 @@ hr {
     
     .showcase{
         height: auto;
-        margin: 30px 0 0 0;
+        margin: 30px 0 30px 0;
         display: grid;
         justify-content: center;
         grid-template-columns: auto;
@@ -398,6 +392,11 @@ hr {
         "txt";
     }
     
+    .topImg{
+    width: 80vw !important;
+    display: block;
+}
+
     .gridImg{
         display: grid;
         grid-area: pic;
@@ -413,17 +412,21 @@ hr {
         color: #49654E;
         font-weight: bold;
         font-size: 28pt;
+        margin: 10px 0 10px 0;
         font-family: 'Teko', sans-serif;
     }
     
     .showHiFi{
         width: 80vw;
+        margin: auto;
     }
     
     #userPersona{
+        display: block;
         object-fit: contain;
         width: 300px;
         height: 80vh;
+        margin: auto;
     }
     
     .showData{
@@ -451,11 +454,13 @@ hr {
     
     .info{
         justify-items: center;
+
     }
     
     .col{
         max-width: 80vw;
         padding: 0;
+
     }
     
     .dataCol{
@@ -467,9 +472,7 @@ hr {
     }
     
     .data{
-        display: flex;
-        flex-direction: column;
-        justify-items: center;
+        justify-content: center;
     }
     
     .dataInfo{
@@ -480,6 +483,8 @@ hr {
     }
     
     .fidelityImg{
+        display: block;
+        margin: auto;
         object-fit: contain;
         height: auto;
         width: auto;
